ChangeLog - ljdump

Version 1.3.3 - 2009-01-10

- Feature: ljdump now prompts for login info if ljdump.config does not exist

Version 1.3.2 - 2009-01-09

- Bugfix: Handle case where userpic keywords contain a / or \.

Version 1.3.1 - 2009-01-08

- Feature: Download and save userpic images
- Feature: Resume download where it left off if interrupted
- Bugfix: Handle userpic keywords with non-ASCII characters
- Bugfix: Handle unexpected empty item

Version 1.2 - 2006-09-08

- Fetch userpic data into userpics.xml

Version 1.1 - 2006-01-09

- Add comment downloading.

Version 1.0.3 - 2005-12-25

- Get updated journal entries in addition to new entries

Version 1.0.2 - 2005-11-25

- Set +x on ljdump.py

Version 1.0.1 - 2005-11-25

- Corrected total items count
- Added shebang line to top of script

Version 1.0 - 2005-11-25

- Initial version